--- a/index0.html
+++ b/index0.html
@@ -16,7 +16,7 @@
   <link rel="alternate" type="application/rss+xml" title="Bulma: Free, open source, and modern CSS framework based on Flexbox" href="https://jojekyll.github.io/atom.xml">  <!--
   TESTING basiclightbox.electerious.com
 -->
-<link rel="stylesheet" href="https://jojekyll.github.io/css/basicLightbox/basicLightbox.min.css" />
+<link rel="stylesheet" href="https://jojekyll.github.io/css/basicLightbox.min.css" />
   <!--
   END TESTING basiclightbox.electerious.com
 -->
@@ -2839,7 +2839,7 @@ TESTING VEX MODALS https://github.com/HubSpot/vex
 <script src="https://jojekyll.github.io/vendor/clipboard-1.7.1.min.js"></script>
 <script src="https://jojekyll.github.io/lib/main.js?v=202010180038"></script>
 
-<script src="https://jojekyll.github.io/js/basicLightbox/basicLightbox.min.js"></script>
+<script src="https://jojekyll.github.io/js/basicLightbox.min.js"></script>
 
 
 
