--- a/index0.html
+++ b/index0.html
@@ -9,9 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Bulma is a free, open source CSS framework based on Flexbox and built with Sass. It's 100% responsive, fully modular, and available for free.">
   <title>Bulma: Free, open source, and modern CSS framework based on Flexbox</title>
-  <link rel="preload" href="https://jojekyll.github.io/css/dojekyll.min.css?v=202010180038" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="https://jojekyll.github.io/css/dojekyll.min.css?v=202010180038"></noscript>
-
+  <!--<link rel="preload" href="https://jojekyll.github.io/css/dojekyll.min.css?v=202010180038" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="https://jojekyll.github.io/css/dojekyll.min.css?v=202010180038"></noscript>-->
+<link rel="stylesheet" href="https://jojekyll.github.io/css/dojekyll.min.css?v=202010180125">
   <link rel="canonical" href="https://jojekyll.github.io/">
   <link rel="alternate" type="application/rss+xml" title="Bulma: Free, open source, and modern CSS framework based on Flexbox" href="https://jojekyll.github.io/atom.xml">  <!--
   TESTING basiclightbox.electerious.com
