--- a/index0.html
+++ b/index0.html
@@ -24,14 +24,23 @@
   <link rel="alternate" type="application/rss+xml" title="Bulma: Free, open source, and modern CSS framework based on Flexbox" href="https://jojekyll.github.io/atom.xml">  <!--
   TESTING basiclightbox.electerious.com
 -->
-<link rel="stylesheet" href="https://jojekyll.github.io/css/basicLightbox.min.css" />
+<link
+  rel="stylesheet"
+  href="https://jojekyll.github.io/css/basicLightbox.min.css"
+  media="nope!"
+  onload="this.media='all'"
+/>
+
   <!--
   END TESTING basiclightbox.electerious.com
 -->
-
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/csshake/1.5.3/csshake.min.css" integrity="sha512-RliK2gk03WxUELn57ddjWLhEfhUiOZ85VvWLImFy8A7FOPMkF4Z9YGQ3VKX5jpwkEerAL6I0nC+JNeCPrxWBTw==" crossorigin="anonymous" />
-
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/csshake/1.5.3/csshake.min.css"
+  media="nope!"
+  onload="this.media='all'"
+  integrity="sha512-RliK2gk03WxUELn57ddjWLhEfhUiOZ85VvWLImFy8A7FOPMkF4Z9YGQ3VKX5jpwkEerAL6I0nC+JNeCPrxWBTw==" crossorigin="anonymous"
+/>
 
 
   <!--
