--- a/index0.html
+++ b/index0.html
@@ -16,7 +16,7 @@
   rel="stylesheet"
   href="https://jojekyll.github.io/css/dojekyll.min.css?v=202010180125"
   media="nope!"
-  onload="this.media='all'"
+  onload="this.media='all'; this.onload=null;"
 />
 
 
@@ -28,7 +28,7 @@
   rel="stylesheet"
   href="https://jojekyll.github.io/css/basicLightbox.min.css"
   media="nope!"
-  onload="this.media='all'"
+  onload="this.media='all'; this.onload=null;"
 />
 
   <!--
@@ -38,7 +38,7 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/csshake/1.5.3/csshake.min.css"
   media="nope!"
-  onload="this.media='all'"
+  onload="this.media='all'; this.onload=null;"
   integrity="sha512-RliK2gk03WxUELn57ddjWLhEfhUiOZ85VvWLImFy8A7FOPMkF4Z9YGQ3VKX5jpwkEerAL6I0nC+JNeCPrxWBTw==" crossorigin="anonymous"
 />
 
