--- a/modaltests/index.html
+++ b/modaltests/index.html
@@ -531,8 +531,33 @@
                 <div class="intro-column intro-video">
                     <nav class="intro-buttons"> <a class="button is-purple is-large modalup"> <span> <strong>BasicLightBox from template</strong> </span> </a> </nav>
                     <!-- -->
-                    <!----><template class="modalup"> <div class="hero-head"><div class="container "> <div class="is-size-4-mobile mt-3 pt-3 shake shake-constant" style=" font-size: 7em; color: rgba(245, 245, 245, 0.1); z-index:0; position: absolute; top: 0.2em; left: -2em; "> <i class="far fa-grimace fa-8x "></i> </div> </div><div class="container has-text-right"> <a class="closemodalup has-text-light"><i class="far fa-3x fa-times-circle"></i></a> </div> </div> <div class="hero-body"><div class="container has-text-centered"> <div class="columns is-vcentered"> <div class="column "> <div class="cssans is-size-3 is-size-4-touch bd-focus-mobile"> <div class="cssans__accessible"><h3>JoJekyll</h3></div> <div class="cssans__word"> <b class="cssans:J"></b> <b class="cssans:o"></b> <b class="cssans:J"></b> <b class="cssans:e"></b> <b class="cssans:k"></b> <b class="cssans:y"></b> <b class="cssans:l"></b> <b class="cssans:l"></b> </div> </div> <p class="subtitle is-3 is-family-secondary bd-focus-css3"> A badass Jekyll Theme with <span class="shake-slow shake-constant has-text-primary">SUPERPOWERS!</span> </p> </div><div class="column "> <img src="https://res.cloudinary.com/antoniotrento/image/upload/images/sheep.webp" srcset="https://res.cloudinary.com/antoniotrento/image/fetch/c_limit,f_auto,q_39,e_grayscale,w_320/https://res.cloudinary.com/antoniotrento/image/upload/images/sheep.webp 320w, https://res.cloudinary.com/antoniotrento/image/fetch/c_limit,f_auto,q_39,e_grayscale,w_640/https://res.cloudinary.com/antoniotrento/image/upload/images/sheep.webp 640w, https://res.cloudinary.com/antoniotrento/image/fetch/c_limit,f_auto,q_39,e_grayscale,w_960/https://res.cloudinary.com/antoniotrento/image/upload/images/sheep.webp 960w, https://res.cloudinary.com/antoniotrento/image/fetch/c_limit,f_auto,q_39,e_grayscale,w_1280/https://res.cloudinary.com/antoniotrento/image/upload/images/sheep.webp 1280w, https://res.cloudinary.com/antoniotrento/image/fetch/c_limit,f_auto,q_39,e_grayscale,w_1600/https://res.cloudinary.com/antoniotrento/image/upload/images/sheep.webp 1600w" sizes="(min-width: 50rem) 50rem, 90vw" alt="sheep!" loading="lazy" crossorigin="anonymous" /> <p class="subtitle is-3 "> A crazy subtitle </p> </div></div></div> </div><!--<button class="modal-close is-large closemodalup" aria-label="close"></button>--> </template>
-                    <script>
+                    <!----><template class="modalup">
+    <div class="hero-head">
+        <div class="container ">
+            <div class="is-size-4-mobile mt-3 pt-3 shake shake-constant" style=" font-size: 7em; color: rgba(245, 245, 245, 0.1); z-index:0; position: absolute; top: 0.2em; left: -2em; "> <i class="far fa-grimace fa-8x "></i> </div>
+        </div>
+        <div class="container has-text-right"> <a class="closemodalup has-text-light"><i class="far fa-3x fa-times-circle"></i></a> </div>
+    </div>
+    <div class="hero-body">
+        <div class="container has-text-centered">
+            <div class="columns is-vcentered">
+                <div class="column ">
+                    <div class="cssans is-size-3 is-size-4-touch bd-focus-mobile">
+                        <div class="cssans__accessible">
+                            <h3>JoJekyll</h3></div>
+                        <div class="cssans__word"> <b class="cssans:J"></b> <b class="cssans:o"></b> <b class="cssans:J"></b> <b class="cssans:e"></b> <b class="cssans:k"></b> <b class="cssans:y"></b> <b class="cssans:l"></b> <b class="cssans:l"></b> </div>
+                    </div>
+                    <p class="subtitle is-3 is-family-secondary bd-focus-css3"> A badass Jekyll Theme with <span class="shake-slow shake-constant has-text-primary">SUPERPOWERS!</span> </p>
+                </div>
+                <div class="column "> <img src="https://res.cloudinary.com/antoniotrento/image/upload/images/sheep.webp" srcset="https://res.cloudinary.com/antoniotrento/image/fetch/c_limit,f_auto,q_39,e_grayscale,w_320/https://res.cloudinary.com/antoniotrento/image/upload/images/sheep.webp 320w, https://res.cloudinary.com/antoniotrento/image/fetch/c_limit,f_auto,q_39,e_grayscale,w_640/https://res.cloudinary.com/antoniotrento/image/upload/images/sheep.webp 640w, https://res.cloudinary.com/antoniotrento/image/fetch/c_limit,f_auto,q_39,e_grayscale,w_960/https://res.cloudinary.com/antoniotrento/image/upload/images/sheep.webp 960w, https://res.cloudinary.com/antoniotrento/image/fetch/c_limit,f_auto,q_39,e_grayscale,w_1280/https://res.cloudinary.com/antoniotrento/image/upload/images/sheep.webp 1280w, https://res.cloudinary.com/antoniotrento/image/fetch/c_limit,f_auto,q_39,e_grayscale,w_1600/https://res.cloudinary.com/antoniotrento/image/upload/images/sheep.webp 1600w"
+                    sizes="(min-width: 50rem) 50rem, 90vw" alt="sheep!" loading="lazy" crossorigin="anonymous" />
+                    <p class="subtitle is-3 "> A crazy subtitle </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--<button class="modal-close is-large closemodalup" aria-label="close"></button>-->
+</template>                    <script>
                         document.querySelector('a.modalup').onclick = () => {
                                 const instance = basicLightbox.create(document.querySelector('template.modalup'), {
                                     className: "hero is-dark is-bold is-fullheight"
