--- a/404.html
+++ b/404.html
@@ -1,9 +1,19 @@
----
-permalink: /404.html
-layout: default
----
+<!DOCTYPE html>
+<html class="no-js" lang="en-US">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <title>Tailwind Jekyll Starter Kit</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
+  </head>
 
-<style type="text/css" media="screen">
+  <body></body>
+</html>
+
+
+
+  <style type="text/css" media="screen">
   .container {
     margin: 10px auto;
     max-width: 600px;
@@ -23,3 +33,8 @@ layout: default
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
 </div>
+
+
+
+</body>
+</html>
